Доработать ручное обучение и hard negative управляемых датасетов
